Fixing bc_domain input box alignment with submit button

--- a/static/css/protocol.css
+++ b/static/css/protocol.css
@@ -5,8 +5,6 @@ body {
 
 #domain_url_form{
 	height: 100%;
-	padding-left: 150px;
-	padding-right: 150px;
 }
 
 #domain_url_form > form > div{
